Cabal-Version:      2.4
Name:               marlowe-pioneer-program
Version:            0.1.0.0
Author:             Lars Bruenjes
Maintainer:         brunjlar@gmail.com
Build-Type:         Simple
Copyright:          © 2022 Lars Bruenjes
License:            Apache-2.0
License-files:      LICENSE

executable choice-if
  default-language: Haskell2010
  hs-source-dirs:   src/lecture03
  main-is:          choice-if.hs
  ghc-options:      -Wall

  build-depends:
    , base ^>=4.14.3.0
    , marlowe

executable choice-if-let
  default-language: Haskell2010
  hs-source-dirs:   src/lecture03
  main-is:          choice-if-let.hs
  ghc-options:      -Wall

  build-depends:
    , base ^>=4.14.3.0
    , marlowe

executable simple-payment-pay
  default-language: Haskell2010
  hs-source-dirs:   src/lecture03
  main-is:          simple-payment-pay.hs
  ghc-options:      -Wall

  build-depends:
    , base ^>=4.14.3.0
    , marlowe

executable simple-payment-close
  default-language: Haskell2010
  hs-source-dirs:   src/lecture03
  main-is:          simple-payment-close.hs
  ghc-options:      -Wall

  build-depends:
    , base ^>=4.14.3.0
    , marlowe
