Cabal-Version:      2.4
Name:               marlowe-pioneer-program
Version:            0.1.0.0
Author:             Lars Bruenjes
Maintainer:         brunjlar@gmail.com
Build-Type:         Simple
Copyright:          © 2022 Lars Bruenjes
License:            Apache-2.0
License-files:      LICENSE

executable choice-if
  default-language: Haskell2010
  hs-source-dirs:   src/lecture03
  main-is:          choice-if.hs
  ghc-options:      -Wall

  build-depends:
    , base ^>=4.14.3.0
    , marlowe

executable choice-if-let
  default-language: Haskell2010
  hs-source-dirs:   src/lecture03
  main-is:          choice-if-let.hs
  ghc-options:      -Wall

  build-depends:
    , base ^>=4.14.3.0
    , marlowe

executable double-pay
  default-language: Haskell2010
  hs-source-dirs:   src/lecture04
  main-is:          double-pay.hs
  ghc-options:      -Wall

  build-depends:
    , base ^>=4.14.3.0
    , marlowe

executable double-pay-refactored
  default-language: Haskell2010
  hs-source-dirs:   src/lecture04
  main-is:          double-pay-refactored.hs
  ghc-options:      -Wall

  build-depends:
    , base ^>=4.14.3.0
    , marlowe

executable homework04
  default-language: Haskell2010
  hs-source-dirs:   src/lecture04
  main-is:          homework04.hs
  ghc-options:      -Wall

  build-depends:
    , base ^>=4.14.3.0
    , marlowe

executable multi-pay
  default-language: Haskell2010
  hs-source-dirs:   src/lecture04
  main-is:          multi-pay.hs
  ghc-options:      -Wall

  build-depends:
    , base ^>=4.14.3.0
    , marlowe

executable simple-payment-pay
  default-language: Haskell2010
  hs-source-dirs:   src/lecture03
  main-is:          simple-payment-pay.hs
  ghc-options:      -Wall

  build-depends:
    , base ^>=4.14.3.0
    , marlowe

executable simple-payment-close
  default-language: Haskell2010
  hs-source-dirs:   src/lecture03
  main-is:          simple-payment-close.hs
  ghc-options:      -Wall

  build-depends:
    , base ^>=4.14.3.0
    , marlowe
